WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55364
Plugins don't work in MiniBrowser on Windows
https://bugs.webkit.org/show_bug.cgi?id=55364
Summary
Plugins don't work in MiniBrowser on Windows
Adam Roben (:aroben)
Reported
2011-02-28 05:12:54 PST
Plugins don't work in MiniBrowser on Windows
Attachments
Tell MiniBrowser's WKViews that they're in a window
(1.33 KB, patch)
2011-02-28 05:14 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-02-28 05:14:01 PST
Created
attachment 84042
[details]
Tell MiniBrowser's WKViews that they're in a window
Adam Roben (:aroben)
Comment 2
2011-02-28 07:33:08 PST
Committed
r79862
: <
http://trac.webkit.org/changeset/79862
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug