Tell MiniBrowser's WKViews that they're in a window

Fixes <http://webkit.org/b/55364> Plugins don't work in MiniBrowser on Windows

Reviewed by Anders Carlsson.

* MiniBrowser/win/BrowserView.cpp:
(BrowserView::create): Call WKViewSetIsInWindow after creating the view.

Canonical link: https://commits.webkit.org/69779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79862 268f45cc-cd09-0410-ab3c-d52691b4dbfc